SAK-15370 few edits
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-15430@57767 66ffb92e-73f9-0310-93c1-f5514f145a0a